fixed card shift on drag problem

--- a/styles/pages/_column.scss
+++ b/styles/pages/_column.scss
@@ -15,7 +15,15 @@
     margin: 0 8px 0;
     // *** 
     max-height: 100%;
+
+    // left: auto !important;
+    // top: auto !important;
     
+  }
+  &__card-container {
+    
+    // left: auto !important;
+    // top: auto !important;
   }
   &__header {
     width: 100%;
